app/styles/main.css
/*$icon-font-path: "/bower_components/sass-bootstrap/fonts/";*/

/*@import 'sass-bootstrap/lib/bootstrap'; */
/*@import '_utils';*/

x3d {
  width: 100%;
}

.fullpage {
  display: flex;
  /*flex-direction: row;*/
  flex-wrap: wrap;
}

.fullpage > div:not(.dg) {
  padding-bottom: 20px;
  min-width: 500px;
  height: 100%;
}

a {
  cursor: pointer;
}

.sash {
  margin-top: 70px;
}

.browsehappy {
    margin: 0.2em 0;
    background: hsla(0, 0%, 80%, 1);
    color: hsla(0, 0%, 0%, 1);
    padding: 0.2em 0;
}

